# tmpl-dp

./: .env  .env.jinja  .gitignore  README.md  README.md.jinja  copier.yml  justfile  justfile.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: preview_release.yaml  preview_release.yml  release_major_version.yaml  release_major_version.yaml.jinja  release_major_version.yml  release_minor_version.yaml  release_minor_version.yml  release_patch_version.yaml  release_patch_version.yaml.jinja  release_patch_version.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc  solution-design.adoc
documentation/: antora.yml.jinja
documentation/modules/ROOT/: nav.adoc  nav.adoc.jinja
documentation/modules/ROOT/pages/: design.adoc.jinja  index.adoc  index.adoc.jinja
information_model/: dp_project.schema.linkml.yaml
information_models/: {{ name | replace("-", "_") }}.schema.linkml.yml.jinja  {{ name }}.schema.linkml.yaml.jinja
scripts/: init-project.sh.jinja  linkml.schema.yaml
